css/base.css
/*-------------------------
	General Styles
--------------------------*/


html {
  background-color: #F2F2F2;
}

body {
  font: medium arial, sans-serif;
  margin: 0;
}

a, a:visited {
  text-decoration: none;
  outline: none;
  color: #2064b8;
}

a:hover {
  text-decoration: underline;
}

hr {
    border: 0;
    height: 1px;
    background: #333;
    background-image: -webkit-linear-gradient(left, #ccc, #333, #ccc); 
    background-image:    -moz-linear-gradient(left, #ccc, #333, #ccc); 
    background-image:     -ms-linear-gradient(left, #ccc, #333, #ccc); 
    background-image:      -o-linear-gradient(left, #ccc, #333, #ccc); 
}

h1 {
  font-size: xx-large;
  font-weight: 700;
  color: #303631;
}

h2 {
  font-size: x-large;
  font-weight: 700;
  color: #303631;
}

h3 {
  font-size: large;
  font-weight: 700;
  color: #303631;
}

/*-------------------------
	Classes
--------------------------*/

.centered {
  position: absolute;
  left: 14.6%;
  right: 9%;
  min-height: 100%;
  background-color: #FFF;
}

.text {
  font: 0.9em arial, sans-serif;
  color: #000;
  text-decoration: none;
}

.text:link,
.text:visited,
.text:hover,
.text:focus,
.text:active {
  color: #000;
  text-decoration: none;
}

.lower {
  position: relative;
  top: 15px;
}

.margin_20 {
  margin: 20px;
}

.left {
  float: left;
}

.right {
  float: right;
}

.clear {
  clear: both;
}

.title {
  font-size: xx-large;
  font-weight: 600;
  color: #303631;
}

.container {
  padding: 3%;
}

/*-------------------------
	IDs
--------------------------*/

#hide {
  display: none;
}
 
/*-------------------------
  Navigation
--------------------------*/

nav {
  position: relative;
  top: 30px;
  z-index: 10;
  height: 50px;
  background-color: #E6E6E6;
}

nav>ul>li {
  font-size: medium;
  position: relative;
  top: 14px;
  list-style: none;
  margin: 0 10px;
  padding: 3px 10px;
  background-color: #DDD;
}

nav>ul>li>a:link,
nav>ul>li>a:visited {
  display: block;
  text-decoration: none;
  color: #555;
}

nav>ul>li:hover {
  background-color: #BDBDBD;
}

nav>ul>li>a:hover {
  text-decoration: none;
}

#banner {
  position: relative;
  z-index: 20;
  margin: 10px 20px;
}

div#pagination {
  position: relative;
  top: 50px;
  left: 20px;
}

div#pagination .pagination_item {
  font-size: small;
  margin: 0 3px;
  padding: 2px 3px;
  color: #848484;
  background-color: #E6E6E6;
}

div#pagination span.pagination_item {
  margin-left: 7px;
  color: #000;
}

div#pagination a.pagination_item:hover {
  background-color: #BDBDBD;
  text-decoration: none;
}

/*-------------------------
  Tag
--------------------------*/

.tag {
  font-size: small;
  background-color: #E6E6E6;
  margin: 10px;
  padding: 1px 4px;
  border: 0;
}

.tag a {
  color: #848484;
}

.tag:hover {
  background-color: #BDBDBD;
}

.tag a:hover {
  text-decoration: none;
}

/*-------------------------
  Aside
--------------------------*/

aside {
  position: absolute;
  top: 163px;
  right: 0;
  width: 19%; /* 19.1% */
  background-color: #FFF;
  /*border: 1px solid;*/
  /*border-radius: 15px;*/
}

aside .tag {
  float: left;
}

/*-------------------------
  Article
--------------------------*/

article {
  font-size: 0.9em;
  clear: left;
  width: 80.7%; /* 80.9% */
  margin-bottom: 50px;
  min-height: 100px;
  background-color: #FFF;
  line-height: 2em;
}

div.article_author {
  clear: both;
  position: relative;
  left: 89%;
  font-size: 0.9em;
  font-style: italic;
}

div.article_head {
  margin: 0;
}

.title a {
  text-decoration: none;
  color: #303631;
}

.ring {
  float: left;
  margin: 0 20px;
}

div.article_body {
  margin-bottom: 5px;
}

div.article_foot {
  clear: both;
  width: 95%;
  margin: 0 auto;
  margin-bottom: 25px;
}

a.article_preview {
  padding: 1px 4px;
  margin: 20px 5px;
  float: left;
}

/*-------------------------
  MarkDown
--------------------------*/

p img {
  float: right;
  margin: 0 0 20px 20px;
}

blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
  overflow: hidden;
}

blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4em;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

blockquote p {
  display: inline;
}

code {
  font-family: monospace;
}

code:not([class|="language"]) {
  background-color: #f4f7fb;
  border-right: 2px solid #819FF7;
  border-bottom: 2px solid #A9BCF5;
  padding: 0.3em 0.5em;
}

/*-------------------------
  Login
--------------------------*/

.login {
  margin: 20px;
}

.login label {
  display: block;
  font-size: large;
}

.login input {
  background-color: #FAFAFA;
  border: 4px solid;
  border-color: #BDBDBD;
  padding: 5px;
}

.login input:-webkit-autofill {
  -webkit-box-shadow: 0 0 0 1000px #FAFAFA inset;
}

.login input:focus {
  outline: none;
  border-color: #A4A4A4;
}

/*-------------------------
  Comment
--------------------------*/

div.comment {
  width: 78%;
  margin-top: 15px;
  background-color: #F1F1F9;
  padding: 10px;
}

  /* comment author */
div.comment > a.text {
  position: relative;
  font-size: 1.3em;
  z-index: 20;
}

div.comment > a.text + div.date {
  position: relative;
  right: 40px;
  bottom: 20px;
  z-index: 10;
  /*font-size: 0.9em;*/
  margin: 3px;
  padding: 0 10px;
  text-indent: -3px;
  width: 70px;
  height: 56px;
  background-color: #E6E6E6;
}

div.comment p {
  margin: 5px;
}


div#insert_comment {
  clear: both;
  position: relative;
  left: 40px;
  margin-bottom: 40px;
}

div#insert_comment div.title {
  margin-bottom: 20px;
}

div#comment_author {
  clear: both;
  margin-bottom: 20px;
}

#comment_body {
  margin-bottom: 20px;
}

#recaptcha_widget_div {
  height: 130px;
  width: 320px;
  margin: 10px;
}

#comment_author_input {
  background-color: #F1F1F9;
  border: 2px solid;
  border-color: #BDBDBD;
  padding: 0 5px;
  width: 340px;
}

#comment_author_input:focus {
  outline: none;
  border-color: #A4A4A4;
}

#comment_body_input {
  background-color: #F1F1F9;
  border: 2px solid;
  border-color: #BDBDBD;
}

#comment_body_input:focus {
  outline: none;
  border-color: #A4A4A4;
}

#comment_error {
  clear: both;
  width: 74%;
  padding: 10px;
  margin: 30px;
  background-color: #F78181;
  border-radius: 10px;
}

/*-------------------------
  Static pages
--------------------------*/

#static {
  font-size: 0.9em;
  clear: left;
  width: 80.7%;
  padding: 3%;
  line-height: 2em;
  background-color: #FFF;
}

/*-------------------------
  Admin
--------------------------*/

#upload {
  clear: both;
  height: 90px;
  width: 90%;
  background-color: #E6E6E6;
  padding: 20px;
  margin: 10px;
  border: 1px solid;
  border-radius: 5px;
}

#uploaded_file {
  font-size: medium;
  font-weight: 700;
}

#ring_select {
  margin: 20px;
  font-weight: 700;
}

#title_select {
  margin: 20px;
  font-weight: 700;
}

#title_select input {
  background-color: #EFE;
  border: 1px solid;
  padding: 0 5px;
  width: 400px;
  height: 22px;
}

#body_edit {
  margin: 20px 10px;
}

#body_edit textarea {
  border: 1px solid;
  border-radius: 5px;
}

#tag_edit {
  margin: 20px 10px;
}

#tag_edit textarea {
  border: 1px solid;
  border-radius: 5px;
}

.publish_button input {
  float: left;
  width: 70px;
  height: 30px;
  margin: 10px;
}

.manage_article {
  float: right;
  font-size: medium;
  background-color: #E6E6E6;
  margin: 7px 20px;
  padding: 1px 4px;
  border: 0;
  border-radius: 10px;
}

